--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
     
     <div class="wrapper1">
       <header>
-        <h1 class="{{ theme === 'light' ? 'light-theme' : 'dark-theme' }}">
+        <h1 class="{{ data-theme === 'light' ? 'light-theme' : 'dark-theme' }}">
           {{ site.title | default: site.github.repository_name }}
         </h1>
 
