--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,8 @@
         }
     </style>
 </head>
-<body style='margin-left: 500px !important;'>
+<body class="light-theme" 
+    style='margin-left: 500px !important;'>
     
     <div class="wrapper1">
       <header>
