--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -125,6 +125,41 @@ body {
     content: '_ ';
 }
 
+body.light-theme {
+    background-color: white;
+    color: black;
+}
+
+body.dark-theme {
+    background-color: black;
+    color: white;
+}
+
+h1.light-theme, h2.light-theme {
+    color: black;
+}
+
+h1.dark-theme, h2.dark-theme {
+    color: white;
+}
+
+a.custom-link {
+    color: black;
+    text-decoration: underline;
+}
+
+body.dark-theme a.custom-link {
+    color: lightgray;
+}
+
+body.dark-theme a.custom-link:hover {
+    color: white;
+}
+
+body.light-theme a.custom-link:hover {
+    color: darkgray;
+}
+
 
 body {
   padding: 50px; /* Adjust the padding around the body content */
