--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -50,7 +50,7 @@ body {
 
 #theme-toggle {
   position: fixed;
-  top: 25%; /* Adjust vertical position as needed */
+  top: 1rem; /* Adjust vertical position as needed */
   right: 1rem;
   z-index: 1000;
   padding: 0.25rem; /* Adjust padding to make button smaller */
