--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,8 @@
         </h1>
 
         {% if site.logo %}
-        <button id="theme-toggle" class="theme-toggle" style="margin-left: 500px !important; margin-right: 485px !important; margin-bottom: 0px !important; top: 52px !important; left: 275px !important;">
+        <button id="theme-toggle">
+          <img src="toggle-icon.png" alt="Toggle Theme">
           <img src="{{ '/assets/img/light-mode.png' | relative_url }}" id="light-icon" style="display: none;" alt="Light Mode Icon">
           <img src="{{ '/assets/img/night-mode.png' | relative_url }}" id="dark-icon" alt="Dark Mode Icon">
         </button>
