--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,8 +53,7 @@
 
         {% if site.logo %}
         <button id="theme-toggle">
-<!--           <img src="toggle-icon.png" alt="Toggle Theme">
-          <img src="{{ '/assets/img/light-mode.png' | relative_url }}" id="light-icon" style="display: none;" alt="Light Mode Icon"> -->
+          <img src="{{ '/assets/img/light-mode.png' | relative_url }}" id="light-icon" style="display: none;" alt="Light Mode Icon">
           <img src="{{ '/assets/img/night-mode.png' | relative_url }}" id="dark-icon" alt="Dark Mode Icon">
         </button>
         <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" style="margin-top: 0px !important; margin-bottom: 8px !important;" />
